# DSA_courses_for_teamwork

./: CMakeLists.txt  README.md
week-02/operations-with-numbers/: CMakeLists.txt  functions.c  functions.h  main.c
week-02/operations-with-numbers/algorithms/: algorithms.c  algorithms.h
week-02/operations-with-numbers/arrays/: arrays.c  arrays.h
week-02/operations-with-numbers/utils/: utils.c  utils.h
week-03/: CMakeLists.txt
week-03/operations-with-stack/: CMakeLists.txt  main.c  product.c  product.h
week-03/operations-with-stack/int_stack/: stack.c  stack.h
week-03/operations-with-struct/: CMakeLists.txt  main.c
week-03/operations-with-struct/product/: product.c  product.h
week-03/stack-struct/struct/: CMakeLists.txt  main.c
week-03/stack-struct/struct/headers/: stack.h
week-03/stack-struct/struct/sources/: stack.c
week-03/struct_data/: CMakeLists.txt
week-04/operations-with-circular-queue/circular_queue/: CMakeLists.txt  circular_queue.c  circular_queue.h  main.c
week-04/operations-with-simple-queue/simple_queue/: CMakeLists.txt  main.c  simple_queue.c  simple_queue.h
week-05/operations-with-circular-linked-list/: CMakeLists.txt  circular_linked_list.c  circular_linked_list.h  main.c
week-05/operations-with-double-list/double_list/: CMakeLists.txt  double_list_functions.c  double_list_functions.h  main.c
week-05/operations-with-simple-list/simple_list/: CMakeLists.txt  main.c  simple_list_functions.c  simple_list_functions.h
week-10/operations-with-binary-search-tree/: main.c
week-10/operations-with-binary-search-tree/sources/: binary_search_tree.c
week-10/operations-with-binary-tree/: main.c
week-12/operations-with-hashTable/hash_static_uj/: CMakeLists.txt  hash_table.c  hash_table.h  main.c
week-13/operations-with-hash-table-chaining/: CMakeLists.txt  main.c
week-13/operations-with-hash-table-chaining/headers/: constants.h  hash_table.h  node.h
week-13/operations-with-hash-table-chaining/sources/: hash_table.c  node.c
week_02/operations_with_numbers/: CMakeLists.txt
week_03/operations-with-struct/: CMakeLists.txt
week_03/operations-with-struct/sources/: product.c  product.h
